fix(truncate): enable inline links to have underline with truncate

--- a/src/patternfly/components/Truncate/truncate.scss
+++ b/src/patternfly/components/Truncate/truncate.scss
@@ -10,6 +10,9 @@
   grid-auto-flow: column;
   align-items: baseline;
   min-width: var(--#{$truncate}--MinWidth);
+  // stylelint-disable property-disallowed-list
+  text-decoration: inherit; // enable inline link to have underline
+  // stylelint-enable property-disallowed-list
 
   &.pf-m-fixed {
     display: inline;
